# xDuinoRails_HIL-Tester

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GUIDE.md  HIL_TESTER_CONCEPT.md  Makefile  cmake_install.cmake  hil_test.yml  roadmap.md
.github/workflows/: hil_test.yml
cfg/: pico-sut1.cfg  pico-sut2.cfg  pico1.cfg  pico2.cfg  stm32f446re.cfg
script/: install_software.sh  run_hil_test.py  setup_rpi.sh
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test_main.c  test_sample.c
test/pico_pwm_generator/: CMakeLists.txt  pico_pwm_generator.c
test/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
test/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
test/sut/pico/blinky/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
